force-app/main/default/objects/BMCServiceDesk__Problem_CI_Link__c/fields/BMCServiceDesk__Configuration_Item__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Configuration_Item__c</fullName>
    <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?id=1010&amp;cmdbRecordId=&quot;+  BMCServiceDesk__FKConfiguration_Item__r.Id ,  BMCServiceDesk__FKConfiguration_Item__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configuration Item / Asset</label>
    <type>Text</type>
</CustomField>