force-app/main/default/objects/BMCServiceDesk__Problem_CI_Link__c/fields/BMCServiceDesk__FKConfiguration_Item__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
    <description>This field stores the foreign key value of the linked configuration item</description>
    <label>Configuration Item</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Problem CI Links</relationshipLabel>
    <relationshipName>Problem_CI_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>