force-app/main/default/objects/BMCServiceDesk__Problem_CI_Link__c/fields/BMCServiceDesk__FKProblem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem__c</fullName>
    <description>This field stores the foreign key value of the linked problem</description>
    <label>Problem</label>
    <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
    <relationshipLabel>Linked Services, Configuration Items and Assets</relationshipLabel>
    <relationshipName>Problem_CI_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>